--- a/src/index.css
+++ b/src/index.css
@@ -96,7 +96,7 @@ body {
   font-size: 0.875rem;
 }
 ul {
-  list-style-type: none;
+  /* list-style-type: none; */
 }
 a {
   text-decoration: none;
